infra/k8s/service-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  namespace: monitoring-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
        - name: service-b
          image: your-dockerhub-username/service-b:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: monitoring-demo
spec:
  type: ClusterIP
  selector:
    app: service-b
  ports:
    - name: http
      port: 9100
      targetPort: 9100
