infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: micro.local
      http:
        paths:
          - path: /submit
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 3000

          - path: /status
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 3000

          - path: /stats
            pathType: Prefix
            backend:
              service:
                name: service-c
                port:
                  number: 4000
